--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <meta property="og:url" content="https://forresttindall.com/" />
     <meta property="og:title" content="Forrest Tindall - Visual System Design" />
     <meta property="og:description" content="Portfolio of Forrest Tindall, a designer and developer based in Boise, ID specializing in brand identity, interface design, and full-stack development." />
-    <meta property="og:image" content="https://forresttindall.com/images/amore%20mockup.png" />
+    <meta property="og:image" content="https://forresttindall.com/images/typography%20portfolio.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://forresttindall.com/" />
     <meta property="twitter:title" content="Forrest Tindall - Visual System Design" />
     <meta property="twitter:description" content="Portfolio of Forrest Tindall, a designer and developer based in Boise, ID specializing in brand identity, interface design, and full-stack development." />
-    <meta property="twitter:image" content="https://forresttindall.com/images/amore%20mockup.png" />
+    <meta property="twitter:image" content="https://forresttindall.com/images/typography%20portfolio.png" />
 
     <!-- Fonts -->
     <link rel="preload" href="/Fonts/PPNeueMachina-InktrapRegular.otf" as="font" type="font/otf" crossorigin />
